Update grid to prevent overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,6 +48,9 @@ img {
 }
 
 pre {
+  padding: 0.5rem;
+  background-color: $main-font-color;
+  color: $main-color-bright;
   overflow: auto;
 }
 
@@ -202,7 +205,7 @@ input[type="submit"]:focus {
 }
 
 .measure--lg {
-  max-width: 80ch;
+  max-width: 70ch;
 }
 
 /* -------------------------------- $LINKS */
@@ -395,6 +398,7 @@ input[type="submit"]:focus {
 
 .grid-item-1 {
   grid-area: 1 / 1 / 2 / 2;
+  min-width: 0;
 
   @media #{$mq-medium} {
     grid-area: 1 / 1 / 1 / 3;
@@ -407,6 +411,7 @@ input[type="submit"]:focus {
 
 .grid-item-2 {
   grid-area: 2 / 1 / 3 / 2;
+  min-width: 0;
 
   @media #{$mq-medium} {
     grid-area: 1 / 3 / 1 / 5;
@@ -419,6 +424,7 @@ input[type="submit"]:focus {
 
 .grid-item-3 {
   grid-area: 3 / 1 / 4 / 2;
+  min-width: 0;
 
   @media #{$mq-medium} {
     grid-area: 2 / 1 / 2 / 5;
